--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,7 @@
         font-family: "Poppins", sans-serif;
         background: linear-gradient(120deg, #fdfbfb, #ebedee);
         color: #333;
+        padding-bottom: 80px; /* space for footer button */
       }
       header {
         background: linear-gradient(90deg, #ff416c, #ff4b2b);
@@ -31,6 +32,12 @@
         padding: 10px;
         max-width: 1000px;
         margin: auto;
+      }
+      .cart-description {
+        text-align: center;
+        margin: 15px 0;
+        font-size: 16px;
+        color: #555;
       }
       table {
         width: 100%;
@@ -89,9 +96,20 @@
         font-size: 18px;
         font-weight: bold;
       }
+      /* Fixed Footer Button */
+      .footer-checkout {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background: #fff;
+        box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.2);
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        z-index: 1000;
+      }
       .checkout-btn {
-        display: block;
-        margin: 20px auto;
         padding: 14px 30px;
         background: linear-gradient(90deg, #00c6ff, #0072ff);
         border: none;
@@ -108,7 +126,7 @@
       /* Fixed Buttons */
       .fixed-buttons {
         position: fixed;
-        bottom: 15px;
+        bottom: 70px;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
@@ -145,14 +163,12 @@
 
       /* Mobile-Friendly Cards */
       .product-card {
-        display: none; /* Hidden on desktop */
+        display: none;
       }
-
       @media (max-width: 800px) {
         table {
           display: none;
-        } /* Hide table on mobile */
-
+        }
         .product-card {
           display: flex;
           flex-direction: column;
@@ -160,42 +176,44 @@
           border-radius: 12px;
           box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
           margin: 10px 0;
-          padding: 15px;
+          padding: 10px;
+          font-size: 14px;
         }
         .product-card img {
           width: 100%;
-          height: 150px;
+          height: 120px;
           border-radius: 12px;
           object-fit: cover;
-          margin-bottom: 10px;
-        }
-        .product-card div {
-          margin-bottom: 5px;
+          margin-bottom: 8px;
         }
         .product-actions {
           display: flex;
           justify-content: space-between;
           align-items: center;
           flex-wrap: wrap;
+          font-size: 14px;
+        }
+        .qty-btn,
+        .remove-btn {
+          padding: 4px 8px;
+          font-size: 14px;
         }
       }
 
       @media (max-width: 600px) {
-        .qty-btn,
-        .remove-btn {
-          padding: 5px 10px;
-          font-size: 14px;
+        body {
+          padding-bottom: 120px;
+        }
+        .icon-button {
+          padding: 12px;
+          font-size: 18px;
         }
         .checkout-btn {
           font-size: 16px;
           padding: 12px 25px;
         }
-        .fixed-buttons {
-          gap: 12px;
-        }
-        .icon-button {
-          padding: 12px;
-          font-size: 18px;
+        .product-card img {
+          height: 100px;
         }
       }
     </style>
@@ -204,6 +222,10 @@
     <header>🛒 Your Cart</header>
 
     <div class="cart-container">
+      <div class="cart-description">
+        Review your items below and proceed to checkout when ready.
+      </div>
+
       <table id="cartTable">
         <thead>
           <tr>
@@ -221,6 +243,10 @@
       <div id="mobileCards"></div>
 
       <div class="summary" id="summary">Total: ₹0</div>
+    </div>
+
+    <!-- Footer Checkout -->
+    <div class="footer-checkout">
       <button class="checkout-btn" onclick="checkout()">
         Proceed to Checkout
       </button>
@@ -300,7 +326,6 @@
             changeQty(id, delta);
           });
         });
-
         document.querySelectorAll(".remove-btn").forEach((btn) => {
           btn.addEventListener("click", function () {
             const id = this.dataset.id;
