--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         font-family: "Poppins", sans-serif;
         background: linear-gradient(120deg, #fdfbfb, #ebedee);
         color: #333;
+        padding-bottom: 100px; /* space for fixed buttons */
       }
       header {
         background: linear-gradient(90deg, #7b2ff7, #f107a3);
@@ -36,7 +37,6 @@
       }
 
       /* Categories */
-      /* Categories */
       .categories {
         display: flex;
         gap: 12px;
@@ -44,29 +44,27 @@
         overflow-x: auto;
         background: #fff;
         border-radius: 12px;
-        margin: 10px auto; /* center horizontally */
+        margin: 10px auto;
         box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
         white-space: nowrap;
-        justify-content: center; /* centers categories */
+        justify-content: center;
       }
-
       .category {
         text-align: center;
         cursor: pointer;
         transition: transform 0.3s;
-        flex: 0 0 auto; /* prevents stretching */
+        flex: 0 0 auto;
       }
-
       .category img {
-        width: 50px;
-        height: 50px;
+        width: 55px;
+        height: 55px;
         border-radius: 50%;
         object-fit: cover;
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
         transition: 0.3s;
       }
       .category p {
-        font-size: 12px;
+        font-size: 13px;
         margin: 4px 0 0 0;
       }
       .category:hover {
@@ -125,19 +123,18 @@
       /* Fixed Buttons */
       .fixed-buttons {
         position: fixed;
-        bottom: 10px;
+        bottom: 12px;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
         gap: 15px;
         z-index: 9999;
-        flex-wrap: nowrap;
         justify-content: center;
       }
       .icon-button {
         background: linear-gradient(145deg, #ff416c, #ff4b2b);
         border: none;
-        padding: 12px;
+        padding: 14px;
         border-radius: 50%;
         cursor: pointer;
         font-size: 18px;
@@ -194,6 +191,10 @@
       .start-shopping {
         text-align: center;
         margin: 20px;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
       }
       .start-shopping button {
         background: linear-gradient(90deg, #ff416c, #ff4b2b);
@@ -210,33 +211,42 @@
         transform: scale(1.05);
       }
 
-      /* 📱 Responsive */
+      /* 📱 Mobile Theme */
       @media (max-width: 600px) {
         header img {
           height: 50px;
         }
+        .categories {
+          gap: 8px;
+          padding: 8px;
+        }
         .category img {
-          width: 40px;
-          height: 40px;
+          width: 42px;
+          height: 42px;
         }
         .category p {
-          font-size: 10px;
+          font-size: 11px;
         }
         .slide {
-          width: 180px;
-          height: 120px;
+          width: 170px;
+          height: 110px;
           margin: 0 5px;
         }
         .section {
           flex-direction: column;
           text-align: center;
+          padding: 12px;
         }
         .middle img {
-          max-width: 90%;
+          max-width: 95%;
         }
         .start-shopping button {
           width: 100%;
           font-size: 14px;
+        }
+        .icon-button {
+          padding: 12px;
+          font-size: 16px;
         }
       }
     </style>
@@ -324,7 +334,7 @@
     </div>
 
     <div class="start-shopping">
-      <button onclick="enterStore()">Start Shopping 🛒</button>
+      <a href="./category.html"> <button>Start Shopping 🛒</button></a>
       <a href="./admin.html"><button>Admin</button></a>
     </div>
 
