--- a/promoting.html
+++ b/promoting.html
@@ -9,13 +9,18 @@
         font-family: "Poppins", sans-serif;
         margin: 0;
         padding: 0;
-        background: url("./promo-bg.jpg") no-repeat center center fixed;
+        background: url("./v.r\ logo.png") no-repeat center center fixed;
         background-size: cover;
       }
 
       header {
         text-align: center;
-        background: linear-gradient(90deg, #ff416c, #ff4b2b);
+        background: rgba(255, 65, 108, 0.9); /* transparent gradient */
+        background: linear-gradient(
+          90deg,
+          rgba(255, 65, 108, 0.9),
+          rgba(255, 75, 43, 0.9)
+        );
         color: white;
         padding: 20px;
         font-size: 28px;
@@ -26,7 +31,7 @@
       .container {
         max-width: 700px;
         margin: 40px auto;
-        background: rgba(255, 255, 255, 0.95);
+        background: rgba(255, 255, 255, 0.8); /* transparent white */
         padding: 30px;
         border-radius: 15px;
         box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
@@ -75,7 +80,7 @@
         align-items: center;
         gap: 15px;
         margin-bottom: 15px;
-        background: #f4f4f4;
+        background: rgba(255, 255, 255, 0.85); /* transparent card */
         padding: 10px;
         border-radius: 10px;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -92,6 +97,41 @@
         padding: 8px 14px;
         font-size: 14px;
         border-radius: 8px;
+      }
+
+      /* 🔹 Mobile Responsive Styles */
+      @media (max-width: 600px) {
+        header {
+          font-size: 22px;
+          padding: 15px;
+        }
+
+        .container {
+          margin: 20px;
+          padding: 20px;
+        }
+
+        input,
+        button {
+          font-size: 14px;
+          padding: 10px;
+        }
+
+        li {
+          flex-direction: column;
+          align-items: flex-start;
+          text-align: center;
+        }
+
+        li img {
+          width: 100%;
+          max-height: 180px;
+        }
+
+        li button {
+          width: 100%;
+          margin-top: 10px;
+        }
       }
     </style>
   </head>
@@ -123,9 +163,9 @@
         images.forEach((url, idx) => {
           const li = document.createElement("li");
           li.innerHTML = `
-        <img src="${url}" alt="Promo ${idx + 1}">
-        <button onclick="removeImage(${idx})">❌ Remove</button>
-      `;
+            <img src="${url}" alt="Promo ${idx + 1}">
+            <button onclick="removeImage(${idx})">❌ Remove</button>
+          `;
           ul.appendChild(li);
         });
         localStorage.setItem("sliderImages", JSON.stringify(images));
